src/test/ui/const-generics/issues/issue-71611.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71611.rs:4:31
   |
LL | fn func<A, const F: fn(inner: A)>(outer: A) {
   |                               ^ const parameters must have a concrete type

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71611.rs:4:21
   |
LL | fn func<A, const F: fn(inner: A)>(outer: A) {
   |                     ^^^^^^^^^^^^

error: aborting due to 2 previous errors

